--- a/product-service.yaml
+++ b/product-service.yaml
@@ -5,12 +5,11 @@ spring:  datasource:    url: jdbc:h2:mem:productdb
     driver-class-name: org.h2.Driver
     username: ibm
     password: ibm
-  h2:    console:      enabled: true #With this database can be access from browser         application:   name: product-service
-   
+  h2:    console:      enabled: true #With this database can be access from browser            
 eureka:  instance:    instance-id: ${spring.application.name}:${random.int}
   client:
    service-url:
       defaultZone: http://localhost:8090/eureka    
     
     
-msg:   This message if from default property file 
+msg: This message if from default property file 
