--- a/product-service.yaml
+++ b/product-service.yaml
@@ -1,4 +1,9 @@
-       
+eureka:
+  instance:
+    instance-id: ${spring.application.name}:${random.int}
+  client:
+   service-url:
+      defaultZone: http://localhost:8090/eureka       
   
 #Reading it from external property file
 spring:  datasource:    url: jdbc:h2:mem:productdb
@@ -6,10 +11,6 @@ spring:  datasource:    url: jdbc:h2:mem:productdb
     username: ibm
     password: ibm
   h2:    console:      enabled: true #With this database can be access from browser            
-eureka:  instance:    instance-id: ${spring.application.name}:${random.int}
-  client:
-   service-url:
-      defaultZone: http://localhost:8090/eureka    
+   
     
-    
-msg: This message if from default property file 
+msg: This message is from default property file 
